# hts_engine_API

./: .gitignore  .project  .travis.yml  README  README.md  appveyor.yml  msys_build.sh
.github/workflows/: ccpp.yaml
src/: .cvsignore  .gitignore  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.mak  NEWS  README  configure.ac  hts_engine_API.pc.in  waf  wscript
src/config/: .cvsignore
src/include/: HTS_engine.h
src/lib/: .gitignore  HTS_audio.c  HTS_engine.c  HTS_gstream.c  HTS_hidden.h  HTS_label.c  HTS_misc.c  HTS_model.c  HTS_pstream.c  HTS_sstream.c  HTS_vocoder.c  Makefile.am  Makefile.mak  wscript
